# cs639-hackathon-judge-ft

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hackathon-sft-finetune-1 (2).ipynb  hackathon-sft-finetune-1.ipynb  hackathon_sft_finetune (1).ipynb  hackathon_sft_finetune.ipynb  kaggle_test.ipynb  pyproject.toml  test_smoke.py
old-notebooks/: hackathon-sft-finetune-1 (1).ipynb  hackathon_sft_devpost.ipynb
src/hackathon_judge_ft/: __main__.py  cli.py  config.py  data.py  evaluate.py  train.py
