[project]
name = "hackathon-judge-ft"
version = "0.1.0"
description = "Fine-tune a small Qwen3 model to judge hackathon projects via SFT distillation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.12",
    "rich>=15.0.0",
    "datasets>=4.8.5",
    "pandas>=2.0",
    "scikit-learn>=1.5",
    "peft>=0.12",
    "trl>=0.11",
    "torch>=2.1",
    "unsloth>=2024.1",
    "unsloth_zoo>=2024.1",
]

[project.scripts]
ft = "hackathon_judge_ft.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon_judge_ft"]

# Install CUDA-enabled torch on Linux (VM). Remove this block for CPU-only.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
