[project]
name = "hackathon-judge-ft"
version = "0.1.0"
description = "Fine-tune a small Qwen3 model to judge hackathon projects via SFT distillation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "typer>=0.12",
    "rich>=15.0.0",
    "datasets>=3.4.1",
    "pyarrow>=17",
    "torch>=2.10,<2.11",
    "transformers>=5.2.0",
    "peft>=0.12",
    "trl>=0.18.2",
    "liger-kernel>=0.5.0",
    "unsloth>=2026.4",
    "unsloth_zoo>=2026.4",
]

[project.scripts]
ft = "hackathon_judge_ft.cli:app"

[tool.uv]
override-dependencies = [
    "triton; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hackathon_judge_ft"]
